# typed-config

./: .gitignore  README.md  mypy.ini  setup.cfg  tox.ini  typed_config.py
.github/workflows/: doctests-workflow.yml  mypy-workflow.yml  tox-workflow.yml
