[metadata]
name = typed-config
description = Automatically build Python configuration structures from type annotations
long_description = file: README.rd, LICENSE
keywords =
  typing
  configuration
license = Apache License 2.0
classifiers =
  Development Status :: 3 - Alpha
  Framework :: Django
  Framework :: Flask
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Topic :: Software Development :: Libraries
  Typing :: Typed 
author = Michael A. Smith <michael@smith-li.com>

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
  python-decouple
